# loopgraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release-pypi.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: eventflow-support-loop-graph.md  loopgraph-support-loop-graph.md
eventflow/: __init__.py  _debug.py
eventflow/bus/: __init__.py  eventbus.py
eventflow/concurrency/: __init__.py  policies.py
eventflow/core/: __init__.py  graph.py  state.py  types.py
eventflow/diagnostics/: __init__.py  inspect.py
eventflow/persistence/: __init__.py  event_log.py
eventflow/registry/: function_registry.py
eventflow/scheduler/: scheduler.py
loopgraph/: __init__.py  _debug.py
loopgraph/bus/: eventbus.py
loopgraph/concurrency/: __init__.py  policies.py
loopgraph/core/: __init__.py  graph.py  state.py  types.py
loopgraph/diagnostics/: inspect.py
loopgraph/persistence/: event_log.py  snapshot.py
loopgraph/registry/: __init__.py  function_registry.py
loopgraph/scheduler/: __init__.py  scheduler.py
specs/001-scheduler-loop-reentry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-scheduler-loop-reentry/checklists/: requirements.md
specs/002-activation-frontier/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-activation-frontier/checklists/: requirements.md
tests/: test_doctests.py  test_eventbus.py  test_integration_workflows.py  test_priority_concurrency.py  test_scheduler_recovery.py
tests/benchmarks/: test_eventflow_benchmark.py  test_loopgraph_benchmark.py
