[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopgraph"
version = "0.3.0"
description = "Event-driven graph workflow engine with native loop support."
authors = [
  { name = "LoopGraph Team" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0"
]
lint = [
  "ruff>=0.6.4",
  "mypy>=1.11.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["loopgraph*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
packages = ["loopgraph"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.setuptools.package-data]
loopgraph = ["py.typed"]
